--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-logging.level.ru.yandex.practicum=debug
+logging.level.org.zalando.logbook=TRACE
+logging.level.ru.yandex.practicum=trace
 server.error.include-message=always
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force=true
